[tool.poetry]
name = "maki"
version = "0.3.3"
description = "The Maki Blogging Engine"
authors = ["Joel Rivera <rivera@joel.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
cherrypy = "^18.6.0"
Mako = "^1.1.2"
SQLAlchemy = "^1.3.17"
psycopg2 = "^2.8.5"
unidecode = "^1.1.1"
atomize = "^0.2.0"
docutils = "^0.16"
# temporarily avoid 8.4.4, then we
# can use just the cherrypy dependency
cheroot = "=8.4.3"
pygments = "^2.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[tool.poetry.scripts]
maki-run = "maki.scripts.run:main"
maki-shell = "maki.scripts.shell:run"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
